增加了对与多态性的理解以及instanceof方法的相关知识点

--- a/Note/Java/多态性.md
+++ b/Note/Java/多态性.md
@@ -9,7 +9,7 @@
   - 子类中与父类同名的属性(注意是重新定义的属性，不是继承而来的)并不会在多态中体现
   - 如果子类中对继承的父类的属性做了修改，则会在多态中体现出来(!important)
 
-代码举例
+***代码举例***
 
 ``` java
 class Person {
@@ -45,9 +45,45 @@ class Test {
 }
 ```
 
-## 虚拟调用（动态绑定）
+## 虚拟方法调用（动态绑定）
 
 - 可以这么说，多态是执行时的行为
 - 可以这么说，如果不是动态绑定的不是多态
 - 静态绑定(前绑定)，指的是编译器编译源码时就确定的东西，像方法的重载等都属于静态绑定
 - 动态绑定(后绑定)，指的是解释运行器工作时才能确定的东西，像多态等都属于动态绑定
+
+## 向下转型
+
+- 与基本数据类型的自动类型提升与强制类型转化类似，类之间有向上转型(多态)和向下转型
+代码实例
+
+```java
+//父类
+class Person {
+    String name;
+    boolean isMale;
+    public void say() {
+        System.out.println("Hello,I'm a person!");
+    }
+}
+//子类
+class Male extends Person{
+    int age=18;
+    @Override
+    public void say() {
+        System.out.println("I'm a man!");
+    }
+    public void Fly() {
+        System.out.println("I can Fly!");
+    }
+}
+//测试类
+public class Test {
+    public static void main(String[] args) {
+        Person p1=new Male();
+        Male m2=(Male)p1;
+        m2.say();//I'm a man
+        m2.Fly();//I can Fly!
+    }
+}
+```
