主要是static关键字的学习

--- a/Note/Java/包装类的应用.md
+++ b/Note/Java/包装类的应用.md
@@ -2,8 +2,8 @@
 
 1. 判断一下obj1和obj2的值是否相同  
 
-```java
-    @Test
+    ```java
+        @Test
         public void packApp() {
             Object o1=true?new Integer(1):new Double(2.0);
             Object o2;
@@ -15,4 +15,93 @@
             System.out.println(o1);//1.0
             System.out.println(o2);//1
         }
-```
+    ```
+
+2. 判断一下三个输出语句的执行结果
+
+    ```Java
+    @Test
+    public void Intecache() {
+        Integer i=new Integer(1);
+        Integer j=new Integer(1);
+        System.out.println(i==j);//false
+        Integer m=1;
+        Integer n=1;
+        System.out.println(m==n);//true
+        Integer x=128;
+        Integer y=128;
+        System.out.println(x==y);//false
+    }
+    ```
+
+    `Integer`中存在常量池，`IntegerCache`结构，其中定义了`Integer[]`,  
+    如果我们使用自动装箱的方式给一个`Integer`赋值且范围在-128~127范围内，可以  
+    直接使用数组中的元素，不用再去new
+3. 一个简单的课后题
+   - 利用`Vector`代替数组处理，从键盘读入学生成绩（以负数代表输入结束），找出最高分，并输出学生成绩等级  
+   - 提示：数组一旦创建，长度就固定不变，所以在创建数组前就需要知道它的长度  
+        而向量类`java.util.Vector`可以根据需要动态伸缩  
+   - 创建`Vector`对象，  
+    `Vector v=new Vector();`
+    给向量添加元素，  
+    `v.addElement(Object obj);//obj必须是对象`
+    取出向量中的元素,`Object obj=v.elementAt();`
+   - 注意第一个元素的下标是0，返回值是Object类型的  
+   计算向量的长度，`v.size();`  
+   若与最高分相差10分内：A等，20分内：B等，
+   30分内：C等，其他：D等
+   代码如下:
+
+   ```Java
+    package top.littlecontrol;
+
+    import java.util.Scanner;
+    import java.util.Vector;
+
+    import org.junit.jupiter.api.Test;
+
+    public class JUnitTest {
+        @Test
+        public void student() {
+            Scanner read=new Scanner(System.in);
+            System.out.println("Please input the Id");
+            int id=read.nextInt();
+            System.out.println("Please input the Score");
+            int score=read.nextInt();
+            Vector v1=new Vector();
+            while(id!=-1) {
+                v1.addElement(new Student(id,score));
+                System.out.println("Please input the Id");
+                id=read.nextInt();
+                System.out.println("Please input the Score");
+                score=read.nextInt();
+            }
+            read.close();
+            Student[] ss=new Student[v1.size()];
+            for(int i=0;i<ss.length;i++) {
+                ss[i]=(Student)v1.elementAt(i);
+            }
+            int maxId=ss[0].id;
+            int maxScore=ss[0].score;
+            for(int i=1;i<ss.length;i++) {
+                if(maxScore<ss[i].score) {
+                    maxId=i;
+                    maxScore=ss[i].score;
+                }
+            }
+            System.out.println("The max score is : "+maxScore);
+            System.out.println("And it's id is : "+maxId);
+            for(int i=0;i<ss.length;i++) {
+                if(ss[i].score>=90) {
+                    System.out.println("Id: "+ss[i].id+"\tScore: "+ss[i].score+" Rank: A");
+                }else if(ss[i].score>=80) {
+                    System.out.println("Id: "+ss[i].id+"\tScore: "+ss[i].score+" Rank: B");
+                }else if(ss[i].score>=70) {
+                    System.out.println("Id: "+ss[i].id+"\tScore: "+ss[i].score+" Rank: C");
+                }else {
+                    System.out.println("Id: "+ss[i].id+"\tScore: "+ss[i].score+" Rank: D");
+                }
+            }
+        }
+    }
+   ```
