增加了同步方法的代码示例

--- a/Note/Java/多线程/解决线程的安全问题.md
+++ b/Note/Java/多线程/解决线程的安全问题.md
@@ -71,4 +71,47 @@ class Ticket_Ex extends Thread{
 同步方法没有提供`同步监听器`,但是有默认的
     - 非静态同步方法的`同步监听器`默认是`this`
     - 静态同步方法的`同步监听器`默认是`当前类`
-一般实现接口用非静态同步方法,继承类使用静态同步方法
+一般实现接口用非静态同步方法,继承类使用静态同步方法  
+代码示例:
+
+```Java
+/* 注意这里为了演示同步方法的示例,并没有设置终止程序,需手动结束进程 */
+class Window1 implements Runnable{
+    private int num=50;
+
+    @Override
+    public void run() {
+        /* 这里进了while循环就出不来了,可以手动结束代码的运行 */
+        while(true){
+            show();
+        }
+    }
+    /* 默认synchronize的同步监听器是this */
+    public synchronized void show(){
+        if(num>0){
+            System.out.println(Thread.currentThread().getName()+":"+num);
+            num--;
+        }
+    }
+}
+
+class Window2 extends Thread{
+    private static int ticket=100;
+
+    @Override
+    public void run() {
+        /* 这里进了while循环就出不来了,可以手动结束代码的运行 */
+        while(true){
+            carry();
+        }
+    }
+    /* 这个继承类的方法如果不是静态的就不可以 */
+    public static synchronized void carry(){
+        if(ticket>0){
+            System.out.println(Thread.currentThread().getName()+":"+ticket);
+            ticket--;
+        }
+    }
+}
+
+```
