第三种解决线程安全问题

--- a/Note/Java/多线程/解决线程的安全问题.md
+++ b/Note/Java/多线程/解决线程的安全问题.md
@@ -115,3 +115,32 @@ class Window2 extends Thread{
 }
 
 ```
+
+## 使用Lock的实现类
+
+### 在有安全问题的代码块处`lock`一下,在最后处`unlock`一下
+
+优点:比较灵活  
+代码示例:
+
+```Java
+class MyThread extends Thread {
+    private static int ticket = 100;
+    static ReentrantLock lock = new ReentrantLock();
+
+    @Override
+    public void run() {
+        while (true) {
+            lock.lock();
+            if (ticket > 0) {
+                System.out.println(Thread.currentThread().getName() + ":" + ticket);
+                ticket--;
+            } else {
+                System.out.println("The tickets is sold out !");
+                break;
+            }
+            lock.unlock();
+        }
+    }
+}
+```
